# delm

./: .gitignore  DELM.py  README.md  SCHEMA_REFERENCE.md  example.config.yaml  example.delm_config.yaml  example.env  example.schema_spec.yaml  example_unified_config.yaml  pyproject.toml  requirements.txt
.delm_cache/: semantic.db
examples/: commodity_schema.yaml  requirements.txt
examples/cost_vs_coverage/: README.md  config.yaml  cost_vs_coverage.py  cost_vs_coverage_results.csv  top_100_keywords.txt  top_250_keywords.txt
examples/cost_vs_coverage/cache/: semantic.db
examples/f1_price_expectation/: config.yaml  f1_price_expectation.py  schema_spec.yaml
examples/prompt_optimization/: baseline_prompt.txt  keywords.txt
src/: DELM.py  models.py  processing.py  schemas.py
src/delm/: DELM.py  __init__.py  batch_processing.py  config.py  constants.py  cost_tracking.py  data_loaders.py  delm.py  exceptions.py  extraction_engine.py  logging.py  models.py  retry_handler.py  schemas.py  splitting_strategies.py
src/delm/core/: __init__.py  data_processor.py  experiment_manager.py  extraction_manager.py
src/delm/schemas/: schema_manager.py  schemas.py
src/delm/strategies/: __init__.py  data_loaders.py  scoring_strategies.py  splitting_strategies.py
src/delm/utils/: __init__.py  batch_processing.py  concurrent_processing.py  cost_estimation.py  cost_estimator.py  cost_tracker.py  json_match_tree.py  json_merge.py  model_price_database.py  performance_estimation.py  post_processing.py  retry_handler.py  semantic_cache.py  type_checks.py
tests/: cross_experiment_preprocessing_test.py  data_processor_test.py  earning_report_delm_testing.py  mock_testing_notebook.py  test_open_ai_key_and_instructor.py  test_unified_schema.py
tests/assets/books/: book_samples.csv  expected_multiple.csv  expected_nested.csv  expected_simple.csv  nested_schema.yaml  simple_schema.yaml
tests/calls_test/: config.yaml  earning_report_delm_testing.py
tests/dir_source_test/: config.yaml  dir_source_test.py  schema_spec.yaml
tests/dir_source_test/csv_data/: item_1.csv  (+1 more)
tests/human_labeled_data/: KIRILL_priceexp_final_data_sample_raw.dta  config.yaml  performance_metrics_test.py  schema_spec.yaml
tests/mock_test/: config.yaml  mock_testing_notebook.py  schema_spec.yaml  test_cost_estimation.py
tests/pdf_climate_test/: config.yaml  pdf_climate_test.py  schema_spec.yaml
tests/performance_estimation_test/: config.yaml  deeply_nested_multiple_schema.yaml  expected_deeply_nested_multiple.csv  expected_multiple.csv  expected_nested.csv  expected_simple.csv  input_data.csv  multiple_schema.yaml  nested_schema.yaml  simple_schema.yaml  test_performance_estimation.py
tests/temperature_comparison_test/: config.yaml  schema_spec.yaml  temperature_comparison_test.py
tests/unit/: README.md  test_merge_jsons_for_record.py  test_semantic_cache.py
(+43 files in other folders)
